<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.about.AboutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:scaleType="fitXY"
            android:id="@+id/collageImage"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:layout_marginHorizontal="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:fontFamily="@string/normal"
            android:justificationMode="inter_word"
            android:text="@string/about_us"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="36dp"
            android:fontFamily="@string/bold"
            android:text="@string/courses_offered"
            android:textColor="@color/title_color"
            android:textSize="@dimen/title_size"
            android:textStyle="bold"/>

        <androidx.viewpager.widget.ViewPager
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginTop="@dimen/text_margin"
            android:foregroundGravity="center"
            android:clipToPadding="false"
            android:overScrollMode="never"
            android:id="@+id/viewPager"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/color3"
                android:layout_margin="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@string/bold"
                    android:text="@string/contact_details"
                    android:textColor="@color/title_color"
                    android:textSize="@dimen/title_size"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/color03"
                    android:orientation="vertical">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@string/normal"
                            android:layout_gravity="center"
                            android:text="@string/guru_nanak_institute_of_technology"
                            android:textColor="@color/text_color"
                            android:textSize="@dimen/text_size" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="5dp"
                            android:fontFamily="@string/normal"
                            android:text="@string/address1"
                            android:textColor="@color/text_color"
                            android:textSize="@dimen/text_size" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@string/normal"
                            android:text="@string/address"
                            android:textColor="@color/text_color"
                            android:justificationMode="inter_word"
                            android:textSize="@dimen/text_size" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="5dp"
                            android:fontFamily="@string/normal"
                            android:text="@string/phone1"
                            android:textColor="@color/text_color"
                            android:textSize="@dimen/text_size" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@string/normal"
                            android:text="@string/phone"
                            android:textColor="@color/text_color"
                            android:textSize="@dimen/text_size" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@string/normal"
                            android:text="@string/e_mail1"
                            android:textColor="@color/text_color"
                            android:textSize="@dimen/text_size" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@string/normal"
                            android:text="@string/email"
                            android:textColor="@color/text_color"
                            android:textSize="@dimen/text_size" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:background="@color/grey2"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color2"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:layout_gravity="center_horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@string/bold"
                        android:layout_gravity="center"
                        android:padding="5dp"
                        android:text="@string/location_on_google_map"
                        android:textColor="@color/title_color"
                        android:textSize="@dimen/title_size"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_placeholder"
                        android:contentDescription="@string/todo" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/map"
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/loc_gnit"
                    android:contentDescription="@string/todo" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>