<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Email.ResetPassword">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearlayout"
        android:layout_width="413dp"
        android:layout_height="135dp"
        android:background="@color/color07"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearlayout"
        app:layout_constraintVertical_bias="0.338">

        <ImageView
            android:layout_width="117dp"
            android:layout_height="149dp"
            app:srcCompat="@drawable/ic_gmail_"
            tools:ignore="VectorDrawableCompat"
            android:contentDescription="@string/todo" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"

            android:text="@string/new_password"
            android:textColor="@color/title_color"
            android:textSize="@dimen/text_size1"
            android:textStyle="bold"
            android:layout_marginLeft="10dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="10dp"
            android:inputType="textPassword"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size1" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"

            android:text="@string/confirm_password"
            android:textColor="@color/title_color"
            android:textSize="@dimen/text_size1"
            android:textStyle="bold"
            android:layout_marginLeft="10dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmPass"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="10dp"
            android:inputType="textPassword"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/changePass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            android:backgroundTint="@color/color07"
            android:padding="5dp"
            android:text="@string/update"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/resetPassProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearlayout"
        app:layout_constraintVertical_bias="0.927" />

</androidx.constraintlayout.widget.ConstraintLayout>